You can now see your own match history.

--- a/FrisbyBall/Models/Labels.resx
+++ b/FrisbyBall/Models/Labels.resx
@@ -201,4 +201,7 @@
   <data name="PlayerNotSelect" xml:space="preserve">
     <value>Player not selected</value>
   </data>
+  <data name="CannotChooseYourself" xml:space="preserve">
+    <value>You cannot choose yourself as opponent</value>
+  </data>
 </root>
